# DICOM-Volume-Rendering

./: .gitignore  .project  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/helmsley/vr/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: config.yml  person.yml
app/src/main/assets/helmsley_cached/: pacs_local.txt
app/src/main/assets/shaders/: ar_cutplane.frag  ar_cutplane.vert  arcore_screen_quad.frag  arcore_screen_quad.vert  colorTransfer.glsl  colorTransferCompute.glsl  colorViz.frag  colorViz.vert  cplane.frag  cplane.vert  marching_cube.glsl  marching_cube_clear.glsl  marching_cube_draw.frag  marching_cube_draw.vert  naive2d.vert  opaViz.frag  opaViz.vert  plane.frag  plane.vert  pointcloud.frag  pointcloud.vert  quad.frag  quad.vert  raycastCompute.glsl  raycastVolume.frag  raycastVolume.glsl  raycastVolume.vert  textureVolume.frag  textureVolume.vert  viewAlignedSlicing.frag  viewAlignedSlicing.vert
app/src/main/assets/shaders/clahe/: LUT.comp  LUT_masked.comp  clipHist.comp  clipHist_masked.comp  clipHist_p2.comp  clipHist_p2_masked.comp  excess.comp  excess_masked.comp  hist.comp  hist_masked.comp  lerp.comp  lerp_focused.comp  lerp_masked.comp  minMax.comp  minMax_masked.comp
app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.desktop  nEntrance.h  vrController.cpp  vrController.h
app/src/main/cpp/AndroidUtils/: AndroidHelper.cpp  AndroidHelper.h  mathUtils.h
app/src/main/cpp/GLPipeline/: Camera.h  Mesh.cpp  Mesh.h  Primitive.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
app/src/main/cpp/Jnis/: dui_interface.cpp  dui_interface.h  jni_interface.cpp  jni_interface.h  jni_main.h  jui_interface.cpp  jui_interface.h
app/src/main/cpp/dicomRenderer/: Color.h  Constants.h  cuttingController.cpp  cuttingController.h  funcsRenderer.cpp  funcsRenderer.h  raycastRenderer.cpp  raycastRenderer.h  screenQuad.cpp  screenQuad.h  texturebasedRenderer.cpp  texturebasedRenderer.h
app/src/main/java/helmsley/vr/: GLActivity.java  JNIInterface.java  MainActivity.java  SplashActivity.java  UIsController.java  UIsManager.java  dicomManager.java
app/src/main/java/helmsley/vr/DUIs/: BasePanel.java  ConfigCardRecyclerViewAdapter.java  DSCardRecyclerViewAdapter.java  DUIHelpers.java  DialogAdapter.java  JUIInterface.java  ListAdapter.java  SeekbarAdapter.java  arUIs.java  checkSpinnerAdapter.java  checkboxAdapter.java  checkpanelAdapter.java  claheUIs.java  cutplaneUIs.java  cuttingUIs.java  dialogUIs.java  funcAdapter.java  mainUIs.java  maskRecyclerViewAdapter.java  maskUIs.java  raycastUIs.java  renderUIs.java  texUIs.java
app/src/main/java/helmsley/vr/Record/: RecordableGLRenderer.java  RecordableGLSurfaceView.java  RecordableSurfaceView.java  Square.java  Triangle.java
app/src/main/java/helmsley/vr/Utils/: AVIRecorder.java  AndroidUtils.java  AudioRecorder.java  CameraPermissionHelper.java  ConfigObject.java  ConfigObjectGroup.java  FPSCounter.java  GestureDetectorCalVR.java  MultiFingerTapDetector.java  PermissionHelper.java  Person.java  PlaneDetectionHelper.java  PushToImebraPipe.java  SwipeDetector.java  dcmImage.java  fileUtils.java  sharedPreferenceHelper.java
app/src/main/java/helmsley/vr/proto/: GrpcTask.java  fileTransferClient.java  operateClient.java  rpcManager.java
app/src/main/proto/: common.proto  file.proto  inspectorSync.proto  transManager.proto
app/src/main/res/drawable/: button_bg_round.xml  splash_window.xml
app/src/main/res/layout/: activity_main.xml  dataset_cards_layout.xml  download_dialog_layout.xml  main_activity.xml
app/src/main/res/layouts/activities/layout/: activity_main.xml  ar_bottom_panel.xml  ar_panel.xml  clahe_panel.xml  cutting_panel.xml  main_activity.xml  main_activity_old.xml  mask_panel.xml  splash_window.xml  transfunc_panel.xml  tune_panel.xml
app/src/main/res/layouts/basics/layout/: baseadapter_layout.xml  check_layout.xml  config_card_layout.xml  dataset_cards_layout.xml  export_dialog_layout.xml  horizontal_item.xml  render_control_panel.xml  spinner_check_layout.xml  spinner_dualseekbar.xml  spinner_item.xml  spinner_tune_layout.xml  thin_spinner_item.xml
app/src/main/res/layouts/dialogs/layout/: connect_dialog_layout.xml  download_dialog_layout.xml  preview_dialog_layout.xml  progress_dialog.xml  progress_layout.xml  tutorial_layout.xml
app/src/main/res/menu/: popup_menu.xml
app/src/main/res/values/: arrays.xml  bools.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/helmsley/vr/: ExampleUnitTest.java
calibration/: calibrate.py  data2img.py  mchessboard  samsung-s10.txt
gradle/wrapper/: gradle-wrapper.properties
oculus/: VrApp.gradle  android.debug.keystore
volume-rendering-cpp/: CMakeLists.txt  Manager.cpp  Manager.h  nEntrance.h  overlayController.cpp  overlayController.h  vrController.cpp  vrController.h
volume-rendering-cpp/GLPipeline/: Camera.h  Mesh.cpp  Mesh.h  Primitive.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
volume-rendering-cpp/Utils/: fileUtils.h  mathUtils.h  perfMonitor.cpp  perfMonitor.h
volume-rendering-cpp/dicomRenderer/: ComputeCLAHE.cpp  ComputeCLAHE.h  Constants.h  ViewAlignedSlicingRenderer.cpp  ViewAlignedSlicingRenderer.h  baseDicomRenderer.h  basequadRenderer.h  centerLineRenderer.cpp  centerLineRenderer.h  claheManager.cpp  claheManager.h  colorbarRenderer.cpp  colorbarRenderer.h  cuttingController.cpp  cuttingController.h  dataVisualizer.cpp  dataVisualizer.h  funcsRenderer.cpp  funcsRenderer.h  graphRenderer.cpp  graphRenderer.h  organMeshRenderer.cpp  organMeshRenderer.h  raycastRenderer.cpp  raycastRenderer.h  screenQuad.cpp  screenQuad.h  texturebasedRenderer.cpp  texturebasedRenderer.h
volume-rendering-java/helmsley/vr/: JNIInterface.java
